--- a/css/style.css
+++ b/css/style.css
@@ -118,7 +118,7 @@ a:hover {
     display: flex;
     justify-content: space-between;
     margin-left: auto;
-    /* width: 570px; */
+    width: calc((100% - 60px) / 2);
 }
 
 .list-item-header:not(:last-child) {
@@ -131,9 +131,6 @@ a:hover {
     cursor: pointer;
     /* background-color: tomato; */
 }
-.navigation .list-item img {
-    margin-right: 12px;
-}
 
 .navigation .list-item:first-child {
     font-size: 16px;
@@ -142,26 +139,25 @@ a:hover {
     text-transform: capitalize;
 }
 
+.navigation .list-item:nth-child(2) {
+    font-size: 15px;
+}
+
 .navigation .list-item:last-child {
     font-weight: 700;
     font-size: 13px;
     text-transform: uppercase;
 }
 
-.navigation .list-item:nth-child(2) {
-    font-size: 15px;
-}
-
 .icon-header {
     margin-right: 10px;
-    fill: currentColor;
 }
 
 .hero {
-    /* padding-left: 100px; */
+    padding-left: 100px;
     background: url(../image/Rectangle\ 5.jpg);
-    min-width: 1500px;
-    min-height: 800px;
+    max-width: 1500px;
+    max-height: 800px;
     background-repeat: no-repeat;
     background-position: right;
     background-size: auto;
@@ -430,8 +426,62 @@ a:hover {
 .list-intresting .list-item {
     display: flex;
     justify-content: center;
+    margin-bottom: 60px;
 }
 
-.intresting-main {
+.intresting-main,
+.intresting-image {
     width: calc((100% - 60px) / 2);
 }
+
+.intresting-image {
+    display: flex;
+    justify-content: space-between;
+    margin-right: 60px;
+}
+
+.intresting-main .title-page { 
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 1.3;
+}
+
+.intresting-text-link {
+    font-weight: 500;
+    font-size: 12px;
+    text-align: center;
+    letter-spacing: 0.05em;
+    text-transform: uppercase;
+    margin-left: 15px;
+}
+
+.intresting-main > a {
+    padding: 0;
+    height: 100%;
+}
+
+.intresting-main > a > .intresting-paragraph {
+    margin-bottom: 20px;
+}
+
+.intresting-main > a > h3 {
+    margin-bottom: 10px;
+}
+
+.intresting-text {
+    font-size: 16px;
+    line-height: 1.5;
+    margin-bottom: 65px;
+}
+
+.intresting-main  a:hover .intresting-text {
+    color: var(--main-black);
+}
+
+.intresting-link img {
+    filter: grayscale(1);
+}
+
+.intresting-link:hover img {
+    filter: none;
+} 
