--- a/css/catalogs.css
+++ b/css/catalogs.css
@@ -156,6 +156,13 @@ a:hover {
     margin-right: 10px;
 }
 
+.header-item-button button {
+    display: flex;
+}
+
+.header-item-button:hover .icon-header {
+    fill: var(--main-red);
+}
 /* footer */
 
 .container-footer,
@@ -200,13 +207,20 @@ a:hover {
     cursor: pointer;
 }
 
+.footer-link button:focus,
+.footer-link button:hover {
+    color: var(--main-white);
+    background-color: var(--main-red);
+}
+
 .footer-form p {
     line-height: 1.5;
     margin-bottom: 65px;
 }
 
-.navi-footer .list li:not(:last-child) {
-    margin-bottom: 18px;
+.navi-footer .list li a {
+    padding-top: 10px;
+    padding-bottom: 10px;
 }
 
 .social-link {
@@ -227,6 +241,38 @@ a:hover {
     padding-bottom: 45px;
 }
 
+footer .section {
+    margin-bottom: 0;
+}
+
+.footer-form-item input {
+    border: none;
+    padding-bottom: 15px;
+    width: 235px;
+    background-color: var(--bg-color);
+}
+
+.footer-form-item {
+    display: flex;
+    justify-content: space-between;
+    border-bottom: 1px solid var(--main-black);
+}
+
+.footer-form-item button {
+    border: 0;
+    cursor: pointer;
+}
+
+.footer-button {
+    margin-bottom: 14px;
+    fill: var(--bg-color);
+    stroke: var(--main-black);
+}
+
+.footer-form-item button:focus .footer-button,
+.footer-form-item button:hover .footer-button {
+    stroke: var(--main-red);
+}
 /* Ключевые направления */
 
 .container-link {
@@ -377,8 +423,18 @@ a:hover {
     font-size: 16px;
 }
 
+.qwerty {
+    border-collapse: collapse;
+}
 
+.qwerty th,
+.qwerty td {
+    padding: 20px;
+}
 
+.qwerty tr:nth-child(2n) {
+    background-color: red;
+}
 /* Воплощаем идеи */
 
 .container-ideas p {
