--- a/css/style.css
+++ b/css/style.css
@@ -43,11 +43,10 @@ a:hover {
 }
 
 .bg-page {
-    background-image: linear-gradient( 
-        to right,
-        #F2F4F7 100%, 
-        #F2F4F7 100%
-        );
+    background: linear-gradient(90deg, 
+    rgb(255, 255, 255) 6%, 
+    rgb(242, 244, 246) 6%);
+
 }
 
 .title-page {
@@ -69,23 +68,20 @@ a:hover {
 
 /* link */
 
-.link-icon-idea {
+.link-icon-idea,
+.link-icon-idea p {
     display: flex;
     justify-content: space-between;
     align-items: center;
     font-weight: 500;
 }
 
-.link-icon-idea span {
-    display: block;
+.link-icon-idea p::before {
+    content: "";
     width: 1000px;
     height: 1px;
-    background-color: var(--main-black);
-}
-
-.link-icon-idea:hover span,
-.link-icon-idea:focus span {
-    background-color: var(--main-red);
+    margin-right: 50px;
+    background-color: currentColor;
 }
 
 .icon-idea {
@@ -147,6 +143,14 @@ a:hover {
 
 .icon-header {
     margin-right: 10px;
+}
+
+.header-item-button button {
+    display: flex;
+}
+
+.header-item-button:hover .icon-header {
+    fill: var(--main-red);
 }
 
 /* Герой */
@@ -329,7 +333,7 @@ a:hover {
 
 /* <!-- Воплощяем идеи --> */
 
-.container-idea p {
+.container-idea > p {
     margin-bottom: 20px;
 }
 
@@ -442,6 +446,11 @@ a:hover {
     line-height: 1.3;
 }
 
+.intresting-link div {
+    display: inline-flex;
+    align-items: center;
+}
+
 .intresting-text-link {
     font-weight: 500;
     font-size: 12px;
@@ -528,13 +537,20 @@ a:hover {
     cursor: pointer;
 }
 
+.footer-link button:focus,
+.footer-link button:hover {
+    color: var(--main-white);
+    background-color: var(--main-red);
+}
+
 .footer-form p {
     line-height: 1.5;
     margin-bottom: 65px;
 }
 
-.navi-footer .list li:not(:last-child) {
-    margin-bottom: 18px;
+.navi-footer .list li a {
+    padding-top: 10px;
+    padding-bottom: 10px;
 }
 
 .social-link {
@@ -553,4 +569,37 @@ a:hover {
 .social-link-item a {
     padding-top: 45px;
     padding-bottom: 45px;
+}
+
+footer .section {
+    margin-bottom: 0;
+}
+
+.footer-form-item input {
+    border: none;
+    padding-bottom: 15px;
+    width: 235px;
+    background-color: var(--bg-color);
+}
+
+.footer-form-item {
+    display: flex;
+    justify-content: space-between;
+    border-bottom: 1px solid var(--main-black);
+}
+
+.footer-form-item button {
+    border: 0;
+    cursor: pointer;
+}
+
+.footer-button {
+    margin-bottom: 14px;
+    fill: var(--bg-color);
+    stroke: var(--main-black);
+}
+
+.footer-form-item button:focus .footer-button,
+.footer-form-item button:hover .footer-button {
+    stroke: var(--main-red);
 }
