--- a/css/polygraphy.css
+++ b/css/polygraphy.css
@@ -130,23 +130,20 @@ a:hover {
 
 /* link */
 
-.link-icon-idea {
+.link-icon-idea,
+.link-icon-idea p {
     display: flex;
     justify-content: space-between;
     align-items: center;
     font-weight: 500;
 }
 
-.link-icon-idea span {
-    display: block;
+.link-icon-idea p::before {
+    content: "";
     width: 1000px;
     height: 1px;
-    background-color: var(--main-black);
-}
-
-.link-icon-idea:hover span,
-.link-icon-idea:focus span {
-    background-color: var(--main-red);
+    margin-right: 50px;
+    background-color: currentColor;
 }
 
 .icon-idea {
@@ -407,7 +404,7 @@ footer .section {
 
 /* Воплощаем идеи */
 
-.container-ideas p {
+.container-ideas > p {
     margin-bottom: 20px;
 }
 
