--- a/css/about.css
+++ b/css/about.css
@@ -43,11 +43,10 @@ a:hover {
 }
 
 .bg-page {
-    background-image: linear-gradient( 
-        to right,
-        #F2F4F7 100%, 
-        #F2F4F7 100%
-        );
+    background: linear-gradient(90deg, 
+    rgb(255, 255, 255) 6%, 
+    rgb(242, 244, 246) 6%);
+
 }
 
 .title-page {
@@ -270,13 +269,17 @@ footer .section {
 
 /* Hero */
 
+.section:nth-child(1) {
+    margin: 0;
+}
+
 .container-hero {
     padding-top: 100px;
+    margin-bottom: 135px;
 }
 
 .hero-title {
     display: flex;
-    margin-bottom: 135px;
 }
 
 .hero-title h1,
@@ -292,11 +295,6 @@ footer .section {
 .hero-title p {
     font-size: 20px;
     line-height: 1.4;
-}
-
-.hero-image {
-    max-width: 1400px;
-    height: 100%;
 }
 
 .advantages-list .list {
@@ -424,6 +422,7 @@ footer .section {
 
 .history-container {
     display: flex;
+    padding-top: 180px;
 }
 
 .history-title {
@@ -436,9 +435,59 @@ footer .section {
     margin-bottom: 15px;
 }
 
+.history-title .title-page span {
+    font-size: 40px;
+    line-height: 1.2;
+}
+
+.history-title-text  {
+    width: calc((100% - 60px) / 2);
+}
+
 .history-title p {
     font-size: 16px;
     line-height: 1.5;
+    margin-bottom: 20px;
+}
+.history-title:nth-child(1) {
+    display: flex;
+    justify-content: space-between;
+    margin-right: 60px;
+}
+
+.history-title:nth-child(2) {
+    padding-top: 15px;
+}
+
+.history-title:nth-child(2) li:nth-child(1) {
+    margin-bottom: 78px;
+}
+
+.history-title:nth-child(2) li:nth-child(2) {
+    margin-bottom: 78px;
+} 
+
+.history-title:nth-child(2) li:nth-child(3) {
+    margin-bottom: 57px;
+} 
+
+.list-item-history {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.list-item-history::after {
+    content: "";
+    border: 1px solid var(--main-grey);
+    width: 1px;
+    height: 130px;
+}
+
+.list-item-history:last-child::after {
+    width: 1px;
+    height: 256px;
 }
 
 /* Оборудование */
